# ebe-commerce

./: .env.example  .gitignore  PRODUCT_GNOME  PRODUCT_PICKER  README.md  SETUP.md  pyproject.toml  render.yaml  requirements.txt
data/: README.md  bundles.csv  products.csv  vendor_offers.csv
deploy/: ebe-host.service  nginx-ebe.conf  register-autopilot-task.ps1  run-autopilot.ps1
docs/: AMAZON_ONBOARDING.md  DEPLOY.md  INTEGRATIONS.md  RENDER.md  RUN_LIVE.md  SHOPIFY_ONBOARDING.md  TIER_SYSTEM_SPEC.md
ebe/: __init__.py  actions.py  alerts.py  arbitrage.py  autobuy.py  autopilot.py  billing.py  brand.py  brief.py  bundles.py  channels.py  cli.py  copywriter.py  costs.py  dashboard.py  edges.py  fees.py  forecast.py  genome.py  host.py  importer.py  journal.py  ledger.py  license.py  membership.py  plans.py  pnl.py  profile.py  publish.py  purchasing.py  report.py  repricer.py  sales.py  scanner.py  scheduler.py  shrinkage.py  sourcing_rank.py  statements.py  status.py  store.py  (+5 more)
examples/: alt_prices.csv  asin_costs.csv  campaigns.csv  candidates.csv  costs.csv  customers.csv  products.csv  subscriptions.csv  supplier_listings.txt  suppliers.csv  vendor_offers.csv
seed/: SEED.md  example_picker.py  universal_genome.py
tests/: test_actions.py  test_adapters.py  test_add_cli.py  test_ai.py  test_ai_ears.py  test_ai_eyes.py  test_alerts.py  test_arbitrage.py  test_autopilot.py  test_base.py  test_base_retry.py  test_best_channel.py  test_billing.py  test_branches.py  test_brief.py  test_bundles.py  test_channels.py  test_command.py  test_compounding.py  test_csv.py  (+57 more)
(+34 files in other folders)
